<resources>
    <string name="setting_offline_download_config_key">offline_download_config_key</string>
    <string name="setting_offline_download_updateapk_key">offline_download_updateapk_key</string>
    <string name="setting_offline_download_advise_key">offline_download_advise_key</string>
    <string name="setting_offline_download_about_key">offline_download_about_key</string>
    <string name="setting_offline_useguide_key">offline_useguide_key</string>
    <string name="setting_offline_download_select_all_key">offline_download_select_all_key</string>
    <string name="setting_offline_sns_bind">offline_sns_bind</string>
    <string name="setting_share_client">setting_share_client</string>
    <string name="network_fail">网络不给力</string>
    <string name="user_center_loaddata_error">加载数据失败，请稍后重试</string>
    <string name="id_push_bd_click">推送_百度_点击</string>
    <string name="user_center_no_more_data">没有更多数据了</string>
    <string name="loading_fail_load_page">网络不给力，请点击刷新</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_book_cover">ActBookCover</string>
    <string name="title_activity_act_book_over">ActBookOver</string>
    <string name="net_error">网络异常，请检查网络</string>
    <string name="state_writting">-连载中</string>
    <string name="state_written">-已完结</string>
    <string name="resource_text">来源：</string>
    <string name="resource_count">本书全部%d个来源</string>
    <string name="succeed_add">成功添加到书架！</string>
    <string name="succeed_remove">成功从书架移除！</string>
    <string name="over_chapter_count">共%d章</string>
    <string name="ask">询问</string>
    <string name="change_source_message">您确定要更换这本书籍来源吗？更换来源会删除您之前缓存的章节</string>
    <string name="change_source_p">确定</string>
    <string name="newest_chapter">最新章节</string>
    <string name="my_book_shelf">我的书架</string>
    <string name="failed_get_data">获取数据失败</string>
    <string name="chapter_sort">第%d章</string>
    <string name="no_net">网络不给力，请稍后重试</string>
    <string name="bookmark_start">在阅读时点击  “</string>
    <string name="bookmark_end">”  按钮添加书签</string>
    <string name="catalog_positive">正序</string>
    <string name="catalog_negative">倒序</string>
    <string name="reading_cache_hint">已添加到缓存管理页面</string>
    <string name="reading_cache">缓存方式</string>
    <string name="reading_all_down">开始缓存</string>
    <string name="reading_current_down">从当前章节缓存</string>
    <string name="err_book_cant_read">抱歉，本书原网站存在问题，无法阅读</string>
    <string name="change_source_tips">当前章节内容存在问题，已为您进行智能切源操作</string>
    <string name="jump_next_chapter">跳过此章</string>
    <string name="change_source_total">您选择的是整本切源，会删除该源已有缓存，确定吗？</string>
    <string name="download_done">缓存完成!</string>
    <string name="download_progress_text">"缓存中,请稍候,已缓存"</string>
    <string name="download_done_title">缓存完成</string>
    <string name="download_done_message">立即安装</string>
    <string name="download_done_p">安装</string>
    <string name="download_done_n">取消</string>
    <string name="already_cached">已缓存</string>
    <string name="chapter">章</string>
    <string name="novel_test_chapter_num">第一百</string>
    <string name="novel_previous_chapter">上一章</string>
    <string name="novel_next_chapter">下一章</string>
    <string name="novel_empty_text">可能是：</string>
    <string name="novel_data_exception">数据异常</string>
    <string name="novel_network_error">网络出现异常</string>
    <string name="novel_click_refresh">点击刷新，重新加载</string>
    <string name="err_source">来源错误</string>
    <string name="succeed_downloading">成功添加到书架，并开始缓存</string>
    <string name="err_no_net">网络不给力，请稍后重试</string>
    <string name="last_chapter_tip">已到最后一章</string>
    <string name="state_downloading">正在缓存：</string>
    <string name="state_waitting">等待缓存：</string>
    <string name="state_paused">已暂停：</string>
    <string name="state_download_failed">缓存失败：</string>
    <string name="state_locked">锁定：</string>
    <string name="setting_loading_update">版本检验中</string>
    <string name="setting_checkupdate_error">检测版本失败，请检查您的网络</string>
    <string name="setting_checkupdate_result_isnew">已是最新版本</string>
    <string name="main_nftmgr_id">小说离线缓存</string>
    <string name="main_update_no_new">您追看的小说暂无更新</string>
    <string name="mian_update_version_dialog_title">新版本:</string>
    <string name="main_notification_ticker">有新版本:</string>
    <string name="mian_click_tiwce_exit">再按一次退出 全本免费阅读器</string>
    <string name="tip_cleaning">正在清理中...</string>
    <string name="tip_cleaning_cache">正在清理缓存中...</string>
    <string name="tip_clear_cache">你确定要清除包括下载书籍在内的所有缓存吗？</string>
    <string name="tip_clear_other_source_cache">缓存新来源，会清除已缓存内容，确认缓存？</string>
    <string name="tip_network_mobile">当前为非Wi-Fi网络,是否继续缓存?</string>
    <string name="tip_space_not_enough">存储空间不足，请检查设备剩余存储空间</string>
    <string name="mian_delete_cache_no_choose">您没有选择书籍</string>
    <string name="is_first_chapter">当前已经是第一章</string>
    <string name="downloadservice_nofify_ticker">开始缓存《</string>
    <string name="download_pager_dialog_title">您确定要删除</string>
    <string name="download_pager_dialog_deletemessage">本小说缓存吗?</string>
    <string name="download_pager_dialog_deletemessage_first">》等</string>
    <string name="download_pager_dialog_deletemessage_after">》小说缓存吗?</string>
    <string name="toast_cache_complete">《%1$s》缓存完成</string>
    <string name="toast_cache_paused">《%1$s》已暂停</string>
    <string name="updatenofiy_new_update">更新了</string>
    <string name="update_notify_zhang">章!</string>
    <string name="update_notify_and">等</string>
    <string name="update_book_count_new">本书更新了</string>
    <string name="app_update">更新</string>
    <string name="game_network_none">网络不给力，请检查网络连接</string>
    <string name="over_index_text2">接下来要不要看看其他有意思的...</string>
    <string name="title_name_setting">设置</string>
    <string name="basic_setting">基本设置</string>
    <string name="search_sorry_no_result">抱歉，暂无搜索结果</string>
    <string name="search_guess_favorite">也许你还喜欢这些</string>
    <string name="search_click_check_isright">请看看输入文字是否有误</string>
    <string name="search_sub_success">成功添加到书架！</string>
    <string name="search_sub_remove_success">成功从书架中移除！</string>
    <string name="book_last_chapter_nama_local_no">该书籍还未智能分章</string>
    <string name="auto_download_wifi">wifi下自动缓存</string>
    <string name="book_item_text">&lt;font color=\"#AEAEAE\">%1$d&lt;/font>/%2$d</string>
    <string name="download_app_nofify_ticker">版本更新中</string>
    <string name="download_app_nofify_title">正在缓存...</string>
    <string name="download_app_nofify_finish_title">点击安装</string>
    <string name="download_app_nofify_finish_content">版本更新</string>
    <string name="download_app_nofify_ticker_error">版本更新失败</string>
    <string name="download_app_nofify_info_error">缓存出错</string>
    <string name="toast_net_weak">网络较弱，努力加载中...</string>
    <string name="book_end_info">当前章节已全部看完，去看看其它是否有更新吧!</string>
    <string name="book_end_return_bookstore"> 去书城看看 </string>
    <string name="loading_read_page">精彩内容即将呈现...</string>
    <string name="add_bookshelf">加入书架</string>
    <string name="no_receive_this_message">不再接收此提示</string>
    <string name="add_bookshelf_information">加入书架后, 可从书架找到这本书,方便阅读!</string>
    <string name="auto_reading_prompt">翻页太麻烦，开启自动阅读</string>
    <string name="cache_clean_success">缓存清除成功</string>
    <string name="cache_clean_fail">缓存清除失败</string>
    <string name="cover_book_category">其他</string>
    <string name="reading_setting_message">检测到您的网络出现问题，为了保证您能够及时获取最新章节，请检查您的网络设置。</string>
    <string name="notification_update_book">更新了</string>
    <string name="notification_update_catalog_list">目录已更新！</string>
    <string name="notification_update_chapter">章!</string>
    <string name="notification_update_catalog">已更新：</string>
    <string name="notification_update_end">等</string>
    <string name="notification_update_book_count">本书更新了</string>
    <string name="notification_update_book_catalog">本书目录已更新！</string>
    <string name="reading_add_succeed">已添入书架</string>
    <string name="reading_add_fail">抱歉,添加书架失败,请重试</string>
    <string name="change_source_view_all">查看全文</string>
    <string name="source_off_line_title">来源下线</string>
    <string name="source_off_line">呃,当前来源出错了，点击下面来源试试</string>
    <string name="search_hint_text">搜索书名或作者</string>
    <string name="bookshelf_insert_success">成功添加到书架！</string>
    <string name="bookshelf_delete_success">成功从书架中移除！</string>
    <string name="search_of_everyone">大家都在搜</string>
    <string name="download_status_complete">缓存完成</string>
    <string name="download_status_underway">缓存中…</string>
    <string name="download_status_already">已缓存</string>
    <string name="download_status_total">全本缓存</string>
    <string name="download_status_paused">缓存已暂停</string>
    <string name="change_source">换源</string>
    <string name="current_source">当前来源</string>
    <string name="translate_code_reading">转码阅读</string>
    <string name="reading_original_web">原网页阅读</string>
    <string name="reading_continue">继续阅读</string>
    <string name="current_novel_source">当前内容来源</string>
    <string name="other_source">其他来源</string>
    <string name="load_original_url_fail">查看原文链接失败</string>
    <string name="not_check_original_url">查看原文链接失败</string>
    <string name="shelf">书架</string>
    <string name="store">书城</string>
    <string name="recommend">精选</string>
    <string name="rank">榜单</string>
    <string name="ranking">排行榜</string>
    <string name="category">分类</string>
    <string name="bookshelf_empty_prompt">书架空空如也~去书城看看吧</string>
    <string name="bookshelf_refresh_network_problem">网络不给力</string>
    <string name="bookshelf_one_book_update">》已更新到最新章节：</string>
    <string name="bookshelf_one_book_update_catalog">》已更新到最新目录！</string>
    <string name="bookshelf_update_chapter">章</string>
    <string name="bookshelf_more_book_update">》等</string>
    <string name="bookshelf_update_chapters">本，有更新！</string>
    <string name="bookshelf_update_chapters_catalog">本，已更新到最新章节！</string>
    <string name="bookshelf_book_source_change">检测到本书当前来源不可用，你可选择：</string>
    <string name="bookshelf_book_source_change_api">检测到本书源站可用，你可选择</string>
    <string name="bookshelf_remove_book">移除书架</string>
    <string name="bookshelf_remove_book_all">一键移除</string>
    <string name="bookshelf_change_source">更换来源</string>
    <string name="bookshelf_change_source_all">一键换源</string>
    <string name="unread_chapter_count">未读</string>
    <string name="bookshelf_change_information">紧急通知</string>
    <string name="bookshelf_change_message">您书架上的书当前来源有问题，点击下方按钮切源之后即可正常阅读。</string>
    <string name="book_cover">书籍详情</string>
    <string name="book_cover_connect">-</string>
    <string name="book_cover_state_writing">连载中</string>
    <string name="book_cover_state_written">已完结</string>
    <string name="book_cover_source">来源：</string>
    <string name="book_cover_no_source">暂无来源</string>
    <string name="book_cover_last_chapter">最新章节：</string>
    <string name="book_cover_update_time">更新：</string>
    <string name="book_cover_reading">转码阅读</string>
    <string name="book_cover_introduction">内容简介</string>
    <string name="book_cover_no_description">无简介</string>
    <string name="book_cover_catalog">查看目录</string>
    <string name="book_cover_recommend">看过本书的人还看了</string>
    <string name="book_cover_author_recommend">作者的其他作品</string>
    <string name="book_cover_no_resource">暂时找不到此本书的资源</string>
    <string name="book_cover_add_bookshelf">加入书架</string>
    <string name="book_cover_remove_bookshelf">移出书架</string>
    <string name="book_cover_havein_bookshelf">已在书架</string>
    <string name="book_cover_continue_read_cache">阅读已缓存内容</string>
    <string name="prompt">提示</string>
    <string name="determine_clear_cache">确定清除缓存吗？</string>
    <string name="determine_clear_all_file_cache">确定清除包括下载书籍在内的所有 \n 缓存吗？</string>
    <string name="determine_leave">离开将丢失已输入的内容,您是否确定要离开?</string>
    <string name="yep">是</string>
    <string name="nap">否</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
</resources>