<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_base_dialog"
        android:orientation="vertical"
        android:scrollbars="vertical">
    
    <TextView
            android:id="@+id/tv_update_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/prompt"
            android:textColor="@color/theme_primary"
            android:textSize="24sp"/>
    
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/theme_primary"/>
    
    <TextView
            android:id="@+id/tv_update_info_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/add_bookshelf_information"
            android:textColor="@color/color_black_353535"
            android:textSize="@dimen/dimen_text_16"/>
    
    <CheckBox
            android:id="@+id/cb_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:button="@drawable/selector_check_box"
            android:checked="false"
            android:paddingLeft="15dp"
            android:text="@string/no_receive_this_message"
            android:textColor="@color/color_black_353535"
            android:textSize="@dimen/dimen_text_16"/>
    
    <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dimen_margin_20"
            android:background="@color/color_white_fafafa">
        
        <View
                android:id="@+id/view_devider"
                android:layout_width="@dimen/dimen_view_width_0.5"
                android:layout_height="@dimen/dimen_view_height_30"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:background="@color/color_gray_d9d9d9"/>
        
        <Button
                android:id="@+id/bt_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/view_devider"
                android:background="@drawable/selector_background_gray"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/selector_text_gray_green"
                android:textSize="@dimen/dimen_text_18"/>
        
        <Button
                android:id="@+id/bt_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/view_devider"
                android:background="@drawable/selector_background_gray"
                android:gravity="center"
                android:text="@string/add_bookshelf"
                android:textColor="@color/selector_text_black_green"
                android:textSize="@dimen/dimen_text_18"/>
        
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_height_0.5"
                android:background="@color/color_gray_d9d9d9"/>
    </RelativeLayout>
</LinearLayout>
