<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_view_width_300"
    android:layout_height="@dimen/dimen_view_height_200"
    android:layout_gravity="center"
    android:background="@drawable/background_base_dialog"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_view_height_64">

        <TextView
            android:id="@+id/dialog_prompt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_margin_19"
            android:gravity="center_vertical"
            android:text="@string/prompt"
            android:textColor="@color/guideline_text_selected"
            android:textSize="@dimen/dimen_text_24" />
    </RelativeLayout>

    <include layout="@layout/layout_divider" />

    <TextView
        android:id="@+id/dialog_information"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="6dp"
        android:paddingLeft="@dimen/dimen_padding_10"
        android:paddingRight="@dimen/dimen_padding_10"
        android:text="@string/determine_clear_cache"
        android:textColor="@color/color_black_353535"
        android:textSize="@dimen/dimen_text_16" />

    <include layout="@layout/layout_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_view_height_50"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_dialog_button"
            android:gravity="center"
            android:minWidth="@dimen/dimen_view_width_24"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textColor="@color/selector_text_gray_green"
            android:textSize="@dimen/dimen_text_18" />

        <View
            android:layout_width="@dimen/dimen_view_width_0.5"
            android:layout_height="@dimen/dimen_view_height_30"
            android:layout_gravity="center_vertical"
            android:background="@color/color_gray_d9d9d9" />

        <Button
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_dialog_button"
            android:gravity="center"
            android:minWidth="@dimen/dimen_view_width_24"
            android:singleLine="true"
            android:text="@string/confirm"
            android:textColor="@color/selector_text_gray_green"
            android:textSize="@dimen/dimen_text_18" />
    </LinearLayout>

</LinearLayout>
