<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_view_width_280"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_base_dialog"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/base_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_view_height_44"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_padding_16"
        android:text="@string/prompt"
        android:textColor="@color/color_black_353535"
        android:textSize="@dimen/dimen_text_18" />

    <TextView
        android:id="@+id/base_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_margin_10"
        android:layout_marginLeft="@dimen/dimen_margin_16"
        android:layout_marginRight="@dimen/dimen_margin_16"
        android:layout_marginTop="@dimen/dimen_margin_10"
        android:lineSpacingExtra="@dimen/dimen_line_8"
        android:text="@string/determine_leave"
        android:textColor="@color/reading_cache_text"
        android:textSize="@dimen/dimen_text_14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="@dimen/dimen_padding_16">

        <Button
            android:id="@+id/base_dialog_abrogate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_view_height_25"
            android:background="@drawable/background_dialog_button"
            android:layout_toLeftOf="@+id/base_dialog_confirm"
            android:gravity="center"
            android:minWidth="@dimen/dimen_view_width_25"
            android:paddingLeft="@dimen/dimen_padding_10"
            android:paddingRight="@dimen/dimen_padding_10"
            android:layout_marginRight="@dimen/dimen_margin_10"
            android:layout_marginLeft="@dimen/dimen_margin_10"
            android:singleLine="true"
            android:text="@string/nap"
            android:textColor="@color/theme_primary"
            android:textSize="@dimen/dimen_text_18"/>

        <Button
            android:id="@+id/base_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_view_height_25"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_dialog_button"
            android:gravity="center"
            android:minWidth="@dimen/dimen_view_width_25"
            android:paddingLeft="@dimen/dimen_padding_10"
            android:paddingRight="@dimen/dimen_padding_10"
            android:singleLine="true"
            android:text="@string/yep"
            android:textColor="@color/color_gray_9c9c9c"
            android:textSize="@dimen/dimen_text_18" />

    </RelativeLayout>

</LinearLayout>
