<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

        <TextView
                android:id="@+id/txt_dialog_title"
                style="@style/style_text_large_plain"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/prompt"/>

        <TextView
                android:id="@+id/txt_dialog_information"
                style="@style/style_text_normal_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="6dp"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/determine_clear_all_file_cache"/>

        <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@id/ll_btn"
                android:background="#FFEDEEF0"/>

        <LinearLayout
                android:id="@+id/ll_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_view_height_50"
                android:layout_below="@+id/view_divider"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_cancel"
                    style="@style/style_text_normal_plain"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_dialog_button"
                    android:gravity="center"
                    android:minWidth="@dimen/dimen_view_width_24"
                    android:singleLine="true"
                    android:text="@string/cancel"/>

            <View
                    android:layout_width="@dimen/dimen_view_width_0.5"
                    android:layout_height="@dimen/dimen_view_height_30"
                    android:layout_gravity="center_vertical"
                    android:background="#FFF4F5F7"/>

            <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_dialog_button"
                    android:gravity="center"
                    android:minWidth="@dimen/dimen_view_width_24"
                    android:singleLine="true"
                    android:text="@string/confirm"
                    android:textColor="@color/primary"
                    android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <net.lzbook.kit.widget.NightShadowView
            android:id="@+id/nightShadowView"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="0dp"/>
</FrameLayout>